continue updating summary functions before heading to bed

--- a/examples/m5_example.ipynb
+++ b/examples/m5_example.ipynb
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1513,10 +1513,10 @@
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "Performance: Our out-of-sample APE was nan in the prior month, compared to an average error of 44.46% over the past three months.\n\nTrends: Sales fell by -1.0 last month, down -1.0 over the previous year. We expect sales to continue trending upwards in the coming month."
+      "text/markdown": "**Trends**: Sales fell by -1.0 last month, down -1.0 over the previous year. We expect sales to continue trending upwards in the coming month.\n\n**Seasonality**: Over the past year, we've seen aggregate sales reach as high as 492.0 during the month of March while dropping down to 279.0 during July. "
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 66
     }
    ],
    "source": [
