add new prophet functions before testin

--- a/examples/walmart_example/walmart_example.ipynb
+++ b/examples/walmart_example/walmart_example.ipynb
@@ -838,7 +838,7 @@
    "source": [
     "## Modeling\n",
     "\n",
-    "Now that we're finished with feature engineering, let's take a look at what our final modeling dataframe will look like. Again, only the sample has been updated to this point, not our actual data. When we run `cross_validate_model`, it will automatically create all the features we requested without leaking data to our test set."
+    "Now that we're finished with feature engineering, let's take a look at what our final modeling dataframe will look like. Again, only the sample has been updated to this point, not our actual data. When we run `cross_validate_lgbm`, it will automatically create all the features we requested without leaking data to our test set."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1006,9 +1006,9 @@
   },
   {
    "source": [
-    "Looking good! From here, the actual modeling process is quite easy. It relies on one function, `cross_validate_model()` to do the heavy lifting.\n",
+    "Looking good! From here, the actual modeling process is quite easy. It relies on one function, `cross_validate_lgbm()` to do the heavy lifting.\n",
     "\n",
-    "`cross_validate_model()` incorporates best-in-class modeling and validation strategies into a single function while avoiding data leakage and other issues that tend to arise in complicated modeling pipelines. At a high-level, this function:\n",
+    "`cross_validate_lgbm()` incorporates best-in-class modeling and validation strategies into a single function while avoiding data leakage and other issues that tend to arise in complicated modeling pipelines. At a high-level, this function:\n",
     "\n",
     "- Splits your data into rolling folds using sklearn's `TimeSeriesSplit`\n",
     "- For each fold:\n",
@@ -1016,11 +1016,11 @@
     "    - Scale your training and test sets separately to avoid data leakage\n",
     "    - Mask your test actuals to avoid leakage during feature engineering\n",
     "    - Concatenate your train and test sets to generate all of your requested features, then split them apart again \n",
-    "    - Fit your model using the algorithm you passed to the `estimator_func` argument of `cross_validate_model` and generate predictions\n",
+    "    - Fit your model using the algorithm you passed to the `estimator_func` argument of `cross_validate_lgbm` and generate predictions\n",
     "    - Descale your predictions and actuals\n",
     "    - Store your predictions, actuals, inputs, and parameters into the `result` attribute of your `fframe` for further use\n",
     "    \n",
-    "For all of the options you can pass to this function, see the docs by typing `?fframe.cross_validate_model`. Listed below, you'll find a few example configurations for how you might want to run this function.\n"
+    "For all of the options you can pass to this function, see the docs by typing `?fframe.cross_validate_lgbm`. Listed below, you'll find a few example configurations for how you might want to run this function.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1058,7 +1058,7 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-22-03b610f6d5a0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mestimator_func\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_regression_lgbm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m# use LightGBM's default regressor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mcv_func\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mRandomizedSearchCV\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mn_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m )\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\nthor\\onedrive\\documents\\github\\forecastframe\\forecastframe\\model.py\u001b[0m in \u001b[0;36mcross_validate_model\u001b[1;34m(self, params, estimator_func, splitter, cv_func, folds, gap, n_jobs, verbose, n_iter, scoring_func, **kwargs)\u001b[0m\n\u001b[0;32m    495\u001b[0m         )\n\u001b[0;32m    496\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 497\u001b[1;33m         \u001b[0mtest_error\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimator_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"best_estimator\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    498\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    499\u001b[0m         results.update(\n",
+      "\u001b[1;32mc:\\users\\nthor\\onedrive\\documents\\github\\forecastframe\\forecastframe\\model.py\u001b[0m in \u001b[0;36mcross_validate_lgbm\u001b[1;34m(self, params, estimator_func, splitter, cv_func, folds, gap, n_jobs, verbose, n_iter, scoring_func, **kwargs)\u001b[0m\n\u001b[0;32m    495\u001b[0m         )\n\u001b[0;32m    496\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 497\u001b[1;33m         \u001b[0mtest_error\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mestimator_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"best_estimator\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    498\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    499\u001b[0m         results.update(\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py\u001b[0m in \u001b[0;36mscore\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    552\u001b[0m         \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    553\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 554\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    555\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    556\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_more_tags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     61\u001b[0m             \u001b[0mextra_args\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mextra_args\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m             \u001b[1;31m# extra_args > 0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_regression.py\u001b[0m in \u001b[0;36mr2_score\u001b[1;34m(y_true, y_pred, sample_weight, multioutput)\u001b[0m\n\u001b[0;32m    675\u001b[0m     \"\"\"\n\u001b[0;32m    676\u001b[0m     y_type, y_true, y_pred, multioutput = _check_reg_targets(\n\u001b[1;32m--> 677\u001b[1;33m         y_true, y_pred, multioutput)\n\u001b[0m\u001b[0;32m    678\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    679\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -1076,7 +1076,7 @@
     "params = ff.get_lgb_params(\"full\") # generate a pre-made set of LightGBM params\n",
     "\n",
     "fframe.save_fframe(\"PRE-MODEL.pkl\")\n",
-    "fframe.cross_validate_model(\n",
+    "fframe.cross_validate_lgbm(\n",
     "    params=params,\n",
     "    estimator_func=ff._get_regression_lgbm, # use LightGBM's default regressor\n",
     "    cv_func=RandomizedSearchCV,\n",
@@ -1112,7 +1112,7 @@
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
       "  File \"<ipython-input-40-08f47a2bfb84>\", line 7, in <module>\n",
       "    cv_func=GridSearchCV\n",
-      "  File \"c:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\", line 470, in cross_validate_model\n",
+      "  File \"c:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\", line 470, in cross_validate_lgbm\n",
       "    scoring=scoring,\n",
       "  File \"c:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\", line 163, in _calc_best_estimator\n",
       "    cv_object.fit(X, y, groups=time_grouper)\n",
@@ -1176,7 +1176,7 @@
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "    \u001b[1;31m[... skipping hidden 1 frame]\u001b[0m\n",
       "\u001b[1;32m<ipython-input-40-08f47a2bfb84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mestimator_func\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_tweedie_lgbm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m# use LightGBM's Tweedie regression setting\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mcv_func\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mGridSearchCV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m )\n",
-      "\u001b[1;32mc:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\u001b[0m in \u001b[0;36mcross_validate_model\u001b[1;34m(self, params, estimator_func, splitter, cv_func, folds, gap, n_jobs, verbose, n_iter, scoring_func, **kwargs)\u001b[0m\n\u001b[0;32m    469\u001b[0m             \u001b[0mn_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_iter\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 470\u001b[1;33m             \u001b[0mscoring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    471\u001b[0m         )\n",
+      "\u001b[1;32mc:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\u001b[0m in \u001b[0;36mcross_validate_lgbm\u001b[1;34m(self, params, estimator_func, splitter, cv_func, folds, gap, n_jobs, verbose, n_iter, scoring_func, **kwargs)\u001b[0m\n\u001b[0;32m    469\u001b[0m             \u001b[0mn_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_iter\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 470\u001b[1;33m             \u001b[0mscoring\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscoring\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    471\u001b[0m         )\n",
       "\u001b[1;32mc:\\Users\\nthor\\OneDrive\\Documents\\GitHub\\forecastframe\\forecastframe\\model.py\u001b[0m in \u001b[0;36m_calc_best_estimator\u001b[1;34m(X, y, params, estimator, scoring, splitter, cv_func, folds, n_jobs, verbose, n_iter)\u001b[0m\n\u001b[0;32m    162\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 163\u001b[1;33m     \u001b[0mcv_object\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgroups\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtime_grouper\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    164\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36minner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mextra_args\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[0;32m    840\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 841\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_run_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevaluate_candidates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    842\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -1208,7 +1208,7 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "fframe.cross_validate_model(\n",
+    "fframe.cross_validate_lgbm(\n",
     "    split_period=\"year\",\n",
     "    params=params,\n",
     "    estimator_func=ff._get_tweedie_lgbm, # use LightGBM's Tweedie regression setting\n",
@@ -1231,7 +1231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fframe.cross_validate_model(\n",
+    "fframe.cross_validate_lgbm(\n",
     "    split_period=\"year\",\n",
     "    params=params,\n",
     "    estimator_func=ff._get_quantile_lgbm,\n",
