--- a/examples/prophet_example.ipynb
+++ b/examples/prophet_example.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -631,69 +631,71 @@
      "data": {
       "text/plain": [
        "           ds       y    predicted_y\n",
-       "0  1992-01-01  146376  142481.192487\n",
-       "1  1992-02-01  147079  145222.756781\n",
-       "2  1992-03-01  159336  161849.217883\n",
-       "3  1992-04-01  163669  164463.809584\n",
-       "4  1992-05-01  170068  172553.089026\n",
-       "5  1992-06-01  168663  168247.988621\n",
-       "6  1992-07-01  169890  170461.571996\n",
-       "7  1992-08-01  170364  169201.534273\n",
-       "8  1992-09-01  164617  164133.710806\n",
-       "9  1992-10-01  173655  172461.297308\n",
-       "10 1992-11-01  171547  172265.394042\n",
-       "11 1992-12-01  208838  210152.765374\n",
-       "12 1993-01-01  153221  151821.445258\n",
-       "13 1993-02-01  150087  149136.553249\n",
-       "14 1993-03-01  170439  173813.550540\n",
-       "15 1993-04-01  176456  174663.915648\n",
-       "16 1993-05-01  182231  183792.772238\n",
-       "17 1993-06-01  181535  182032.723292\n",
-       "18 1993-07-01  183682  181597.789028\n",
-       "19 1993-08-01  183318  184303.690528\n",
-       "20 1993-09-01  177406  177647.585016\n",
-       "21 1993-10-01  182737  184238.263666\n",
-       "22 1993-11-01  187443  186719.160031\n",
-       "23 1993-12-01  224540  224705.486946\n",
-       "24 1994-01-01  161349  164275.786433\n",
-       "25 1994-02-01  162841  163580.055978\n",
-       "26 1994-03-01  192319  188495.030252\n",
-       "27 1994-04-01  189569  187053.806344\n",
-       "28 1994-05-01  194927  197197.819257\n",
-       "29 1994-06-01  197946  198069.054856\n",
-       "30 1994-07-01  193355  194288.551058\n",
-       "31 1994-08-01  202388  201294.273260\n",
-       "32 1994-09-01  193954  192203.635144\n",
-       "33 1994-10-01  197956  196240.374691\n",
-       "34 1994-11-01  202520  201257.725047\n",
-       "35 1994-12-01  241111  238275.135453\n",
-       "36 1995-01-01  175344  175915.555739\n",
-       "37 1995-02-01  172138  177006.202551\n",
-       "38 1995-03-01  201279  201364.814685\n",
-       "39 1995-04-01  196039  197102.474089\n",
-       "40 1995-05-01  210478  208020.452254\n",
-       "41 1995-06-01  211844  211614.629584\n",
-       "42 1995-07-01  203411  203876.111468\n",
-       "43 1995-08-01  214248  215357.777240\n",
-       "44 1995-09-01  202122  203957.312783\n",
-       "45 1995-10-01  204044  205325.861681\n",
-       "46 1995-11-01  212190  213444.529362\n",
-       "47 1995-12-01  247491  248964.204960\n",
-       "48 1996-01-01  185019  186021.446616\n",
-       "49 1996-02-01  192380  189322.960386\n",
-       "50 1996-03-01  212110  210712.048299\n",
-       "51 1996-04-01  211718  213808.432353\n",
-       "52 1996-05-01  226936  224016.029815"
+       "0  1996-06-01  217511  218119.420801\n",
+       "1  1996-07-01  218111  220690.243542\n",
+       "2  1996-08-01  226062  218755.778148\n",
+       "3  1996-09-01  209250  211912.953262\n",
+       "4  1996-10-01  222663  222371.720383\n",
+       "5  1996-11-01  223953  221820.064559\n",
+       "6  1996-12-01  258081  270252.271740\n",
+       "7  1997-01-01  200389  194973.273007\n",
+       "8  1997-02-01  197556  191266.791567\n",
+       "9  1997-03-01  225133  222372.047644\n",
+       "10 1997-04-01  220329  222863.886319\n",
+       "11 1997-05-01  234190  233907.905233\n",
+       "12 1997-06-01  227365  231056.070301\n",
+       "13 1997-07-01  231521  229921.116619\n",
+       "14 1997-08-01  235252  232742.861489\n",
+       "15 1997-09-01  222807  223762.749295\n",
+       "16 1997-10-01  232251  231494.145469\n",
+       "17 1997-11-01  228284  234022.012277\n",
+       "18 1997-12-01  271054  280954.109772\n",
+       "19 1998-01-01  207853  204892.223834\n",
+       "20 1998-02-01  203863  203527.772067\n",
+       "21 1998-03-01  230313  234016.540530\n",
+       "22 1998-04-01  234503  231673.001317\n",
+       "23 1998-05-01  245027  243678.304081\n",
+       "24 1998-06-01  244067  244182.476186\n",
+       "25 1998-07-01  241431  238985.116500\n",
+       "26 1998-08-01  240462  247036.122171\n",
+       "27 1998-09-01  231243  235657.512706\n",
+       "28 1998-10-01  244234  240389.399319\n",
+       "29 1998-11-01  240991  246315.576212\n",
+       "30 1998-12-01  288969  291376.379996\n",
+       "31 1999-01-01  218126  214935.031711\n",
+       "32 1999-02-01  220650  216083.678619\n",
+       "33 1999-03-01  253550  245632.618129\n",
+       "34 1999-04-01  250783  240232.066714\n",
+       "35 1999-05-01  262113  253335.487561\n",
+       "36 1999-06-01  260918  257500.524837\n",
+       "37 1999-07-01  262051  247888.045739\n",
+       "38 1999-08-01  265089  261636.345872\n",
+       "39 1999-09-01  253905  247587.081658\n",
+       "40 1999-10-01  258040  249056.298082\n",
+       "41 1999-11-01  264106  258699.573001\n",
+       "42 1999-12-01  317659  301521.403791\n",
+       "43 2000-01-01  236422  225116.097649\n",
+       "44 2000-02-01  250580  228934.823546\n",
+       "45 2000-03-01  279515  254616.790321\n",
+       "46 2000-04-01  264417  258162.254286\n",
+       "47 2000-05-01  283706  270290.269059"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds</th>\n      <th>y</th>\n      <th>predicted_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1992-01-01</td>\n      <td>146376</td>\n      <td>142481.192487</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1992-02-01</td>\n      <td>147079</td>\n      <td>145222.756781</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1992-03-01</td>\n      <td>159336</td>\n      <td>161849.217883</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1992-04-01</td>\n      <td>163669</td>\n      <td>164463.809584</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1992-05-01</td>\n      <td>170068</td>\n      <td>172553.089026</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1992-06-01</td>\n      <td>168663</td>\n      <td>168247.988621</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1992-07-01</td>\n      <td>169890</td>\n      <td>170461.571996</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1992-08-01</td>\n      <td>170364</td>\n      <td>169201.534273</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1992-09-01</td>\n      <td>164617</td>\n      <td>164133.710806</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1992-10-01</td>\n      <td>173655</td>\n      <td>172461.297308</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>1992-11-01</td>\n      <td>171547</td>\n      <td>172265.394042</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>1992-12-01</td>\n      <td>208838</td>\n      <td>210152.765374</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>1993-01-01</td>\n      <td>153221</td>\n      <td>151821.445258</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>1993-02-01</td>\n      <td>150087</td>\n      <td>149136.553249</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>1993-03-01</td>\n      <td>170439</td>\n      <td>173813.550540</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>1993-04-01</td>\n      <td>176456</td>\n      <td>174663.915648</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1993-05-01</td>\n      <td>182231</td>\n      <td>183792.772238</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>1993-06-01</td>\n      <td>181535</td>\n      <td>182032.723292</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>1993-07-01</td>\n      <td>183682</td>\n      <td>181597.789028</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>1993-08-01</td>\n      <td>183318</td>\n      <td>184303.690528</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>1993-09-01</td>\n      <td>177406</td>\n      <td>177647.585016</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>1993-10-01</td>\n      <td>182737</td>\n      <td>184238.263666</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>1993-11-01</td>\n      <td>187443</td>\n      <td>186719.160031</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>1993-12-01</td>\n      <td>224540</td>\n      <td>224705.486946</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>1994-01-01</td>\n      <td>161349</td>\n      <td>164275.786433</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>1994-02-01</td>\n      <td>162841</td>\n      <td>163580.055978</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>1994-03-01</td>\n      <td>192319</td>\n      <td>188495.030252</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>1994-04-01</td>\n      <td>189569</td>\n      <td>187053.806344</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>1994-05-01</td>\n      <td>194927</td>\n      <td>197197.819257</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>1994-06-01</td>\n      <td>197946</td>\n      <td>198069.054856</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>1994-07-01</td>\n      <td>193355</td>\n      <td>194288.551058</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>1994-08-01</td>\n      <td>202388</td>\n      <td>201294.273260</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>1994-09-01</td>\n      <td>193954</td>\n      <td>192203.635144</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>1994-10-01</td>\n      <td>197956</td>\n      <td>196240.374691</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>1994-11-01</td>\n      <td>202520</td>\n      <td>201257.725047</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>1994-12-01</td>\n      <td>241111</td>\n      <td>238275.135453</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>1995-01-01</td>\n      <td>175344</td>\n      <td>175915.555739</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>1995-02-01</td>\n      <td>172138</td>\n      <td>177006.202551</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>1995-03-01</td>\n      <td>201279</td>\n      <td>201364.814685</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>1995-04-01</td>\n      <td>196039</td>\n      <td>197102.474089</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>1995-05-01</td>\n      <td>210478</td>\n      <td>208020.452254</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>1995-06-01</td>\n      <td>211844</td>\n      <td>211614.629584</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>1995-07-01</td>\n      <td>203411</td>\n      <td>203876.111468</td>\n    </tr>\n    <tr>\n      <th>43</th>\n      <td>1995-08-01</td>\n      <td>214248</td>\n      <td>215357.777240</td>\n    </tr>\n    <tr>\n      <th>44</th>\n      <td>1995-09-01</td>\n      <td>202122</td>\n      <td>203957.312783</td>\n    </tr>\n    <tr>\n      <th>45</th>\n      <td>1995-10-01</td>\n      <td>204044</td>\n      <td>205325.861681</td>\n    </tr>\n    <tr>\n      <th>46</th>\n      <td>1995-11-01</td>\n      <td>212190</td>\n      <td>213444.529362</td>\n    </tr>\n    <tr>\n      <th>47</th>\n      <td>1995-12-01</td>\n      <td>247491</td>\n      <td>248964.204960</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>1996-01-01</td>\n      <td>185019</td>\n      <td>186021.446616</td>\n    </tr>\n    <tr>\n      <th>49</th>\n      <td>1996-02-01</td>\n      <td>192380</td>\n      <td>189322.960386</td>\n    </tr>\n    <tr>\n      <th>50</th>\n      <td>1996-03-01</td>\n      <td>212110</td>\n      <td>210712.048299</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>1996-04-01</td>\n      <td>211718</td>\n      <td>213808.432353</td>\n    </tr>\n    <tr>\n      <th>52</th>\n      <td>1996-05-01</td>\n      <td>226936</td>\n      <td>224016.029815</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds</th>\n      <th>y</th>\n      <th>predicted_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1996-06-01</td>\n      <td>217511</td>\n      <td>218119.420801</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1996-07-01</td>\n      <td>218111</td>\n      <td>220690.243542</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1996-08-01</td>\n      <td>226062</td>\n      <td>218755.778148</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1996-09-01</td>\n      <td>209250</td>\n      <td>211912.953262</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1996-10-01</td>\n      <td>222663</td>\n      <td>222371.720383</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1996-11-01</td>\n      <td>223953</td>\n      <td>221820.064559</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1996-12-01</td>\n      <td>258081</td>\n      <td>270252.271740</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1997-01-01</td>\n      <td>200389</td>\n      <td>194973.273007</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1997-02-01</td>\n      <td>197556</td>\n      <td>191266.791567</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1997-03-01</td>\n      <td>225133</td>\n      <td>222372.047644</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>1997-04-01</td>\n      <td>220329</td>\n      <td>222863.886319</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>1997-05-01</td>\n      <td>234190</td>\n      <td>233907.905233</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>1997-06-01</td>\n      <td>227365</td>\n      <td>231056.070301</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>1997-07-01</td>\n      <td>231521</td>\n      <td>229921.116619</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>1997-08-01</td>\n      <td>235252</td>\n      <td>232742.861489</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>1997-09-01</td>\n      <td>222807</td>\n      <td>223762.749295</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1997-10-01</td>\n      <td>232251</td>\n      <td>231494.145469</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>1997-11-01</td>\n      <td>228284</td>\n      <td>234022.012277</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>1997-12-01</td>\n      <td>271054</td>\n      <td>280954.109772</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>1998-01-01</td>\n      <td>207853</td>\n      <td>204892.223834</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>1998-02-01</td>\n      <td>203863</td>\n      <td>203527.772067</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>1998-03-01</td>\n      <td>230313</td>\n      <td>234016.540530</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>1998-04-01</td>\n      <td>234503</td>\n      <td>231673.001317</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>1998-05-01</td>\n      <td>245027</td>\n      <td>243678.304081</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>1998-06-01</td>\n      <td>244067</td>\n      <td>244182.476186</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>1998-07-01</td>\n      <td>241431</td>\n      <td>238985.116500</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>1998-08-01</td>\n      <td>240462</td>\n      <td>247036.122171</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>1998-09-01</td>\n      <td>231243</td>\n      <td>235657.512706</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>1998-10-01</td>\n      <td>244234</td>\n      <td>240389.399319</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>1998-11-01</td>\n      <td>240991</td>\n      <td>246315.576212</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>1998-12-01</td>\n      <td>288969</td>\n      <td>291376.379996</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>1999-01-01</td>\n      <td>218126</td>\n      <td>214935.031711</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>1999-02-01</td>\n      <td>220650</td>\n      <td>216083.678619</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>1999-03-01</td>\n      <td>253550</td>\n      <td>245632.618129</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>1999-04-01</td>\n      <td>250783</td>\n      <td>240232.066714</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>1999-05-01</td>\n      <td>262113</td>\n      <td>253335.487561</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>1999-06-01</td>\n      <td>260918</td>\n      <td>257500.524837</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>1999-07-01</td>\n      <td>262051</td>\n      <td>247888.045739</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>1999-08-01</td>\n      <td>265089</td>\n      <td>261636.345872</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>1999-09-01</td>\n      <td>253905</td>\n      <td>247587.081658</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>1999-10-01</td>\n      <td>258040</td>\n      <td>249056.298082</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>1999-11-01</td>\n      <td>264106</td>\n      <td>258699.573001</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>1999-12-01</td>\n      <td>317659</td>\n      <td>301521.403791</td>\n    </tr>\n    <tr>\n      <th>43</th>\n      <td>2000-01-01</td>\n      <td>236422</td>\n      <td>225116.097649</td>\n    </tr>\n    <tr>\n      <th>44</th>\n      <td>2000-02-01</td>\n      <td>250580</td>\n      <td>228934.823546</td>\n    </tr>\n    <tr>\n      <th>45</th>\n      <td>2000-03-01</td>\n      <td>279515</td>\n      <td>254616.790321</td>\n    </tr>\n    <tr>\n      <th>46</th>\n      <td>2000-04-01</td>\n      <td>264417</td>\n      <td>258162.254286</td>\n    </tr>\n    <tr>\n      <th>47</th>\n      <td>2000-05-01</td>\n      <td>283706</td>\n      <td>270290.269059</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 14
     }
    ],
    "source": [
-    "fframe.cross_validations[0][\"train\"]"
+    "fframe.cross_validations[0][\"test\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
